* fixes the diagnosis not showing up for patients and doctors

--- a/dapp/src/components/CurrentTransactionsList/CurrentTransactionsList.scss
+++ b/dapp/src/components/CurrentTransactionsList/CurrentTransactionsList.scss
@@ -2,7 +2,7 @@
   bottom: 0;
   height: 300px;
   background-color: #fff;
-  padding: 10px 20px;
+  padding: 0 20px;
   position: relative;
   width: 260px;
   overflow: auto;
